apps/kube/n8n/manifest/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: n8n
    namespace: n8n
    labels:
        app: n8n
spec:
    type: ClusterIP
    selector:
        app: n8n
    ports:
        - name: http
          port: 5678
          targetPort: 5678
          protocol: TCP
        - name: gate-metrics
          port: 9090
          targetPort: 9090
          protocol: TCP
