apps/kube/n8n/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: n8n-route
    namespace: n8n
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - n8n.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: n8n
                port: 5678
